# rust-NN

./: Cargo.toml  README.md
.github/workflows/: rust.yml
nn_library/: Cargo.toml
nn_library/src/: lib.rs  matrix.rs
rust_nn/: Cargo.toml
rust_nn/src/: lib.rs
test_enviorment/: Cargo.toml
test_enviorment/src/: main.rs
